--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Software Development</title>
+    <title>Polyglot Workflows 101</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 viewport-fit=cover"">
@@ -23,17 +23,18 @@
   </head>
 
   <body id="index_body" class="animation-fade-in">
-    <h1>Software Development</h1>
+    <h1>Python 101</h1>
 
-    <p><em>Software Development introduces students to building web applications</em></p>
+    <p><em>Polyglot Workflows 101 is a guided tour that walks through installing the tools you will
+    need to start with Polyglot, and learn the workflow you will follow as you proceed in the course</em></p>
 
     <hr>
 
-    <a class="start" href="lab_01.html">Start Software Development</a>
+    <a class="start" href="lab_01.html">Start Python 101</a>
 
     <div class="footer">
       <p>
-        © Software Development
+        © Python 101
       </p>
       <p>️️❤️  Maintained with love by your Polyglot Instructors <a href="https://polyglotcoding.com/about-us" target="_blank" rel="noopener">Bea</a>.</p>
     </div>
