--- a/lab_02.html
+++ b/lab_02.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Lab 2 - Software Development</title>
+    <title>Lab 2 - Python 101</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 viewport-fit=cover"">
-    <meta name="description" content="A guided tour thatintroduces students to building web applications">
+    <meta name="description" content="A guided tour that walks through the fundamentals of Git">
     <meta name="theme-color" content="#0000ff">
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" media="screen" href="reset.css">
@@ -31,182 +31,115 @@
     <div class="layout">
       <div id="index">
         <p class="link-home">
-          <a href="index.html"><span>Software Development</span></a>
+          <a href="index.html"><span>Python 101</span></a>
         </p>
         <button class="link-menu">Menu</button>
         <nav tabindex="0">
           <ol>
-              <li id="lab_1_link"><a href="lab_01.html">Client-Server Model</a></li>
-  <li id="lab_2_link"><a href="lab_02.html">API</a></li>
-  <li id="lab_3_link"><a href="lab_03.html">Homework Assignment 04</a></li>
-  <li id="lab_4_link"><a href="lab_04.html">REST</a></li>
-  <li id="lab_5_link"><a href="lab_05.html">SQL</a></li>
-  <li id="lab_6_link"><a href="lab_06.html">Client Side Programming</a></li>
-  <li id="lab_7_link"><a href="lab_07.html">Node</a></li>
-  <li id="lab_8_link"><a href="lab_08.html">React</a></li>
+              <li id="lab_1_link"><a href="lab_01.html">Top Down</a></li>
+  <li id="lab_2_link"><a href="lab_02.html">Variables</a></li>
+  <li id="lab_3_link"><a href="lab_03.html">Data types and Data Structures</a></li>
+  <li id="lab_4_link"><a href="lab_04.html">Operators</a></li>
+  <li id="lab_5_link"><a href="lab_05.html">Quiz 00</a></li>
+  <li id="lab_6_link"><a href="lab_06.html">Homework Assignment 00</a></li>
 
           </ol>
         </nav>
       </div>
 
       <div id="content" tabindex="-1">
-        <h1 class="lab_title"><em>lab 2</em>  <span class="caps">API</span></h1>
+        <h1 class="lab_title"><em>lab 2</em>  Variables</h1>
 <h2>Goals</h2>
 <ul>
-	<li>To understand what an <span class="caps">API</span> is</li>
-	<li>Make <span class="caps">API</span> calls from the console</li>
-	<li>Make <span class="caps">API</span> calls from python code</li>
+	<li>Start creating your own variables</li>
+	<li>Understand what variables are</li>
 </ul>
-<h2>What is an <span class="caps">API</span>?</h2>
-<p>An <span class="caps">API</span> is a software-to-software interface. Recall in class us talking about computers fetching information or data from another computer. In our case we might fetch the latest Tweets from Twitter&#8217;s <span class="caps">API</span>, or the latest posts in Reddit&#8217;s <span class="caps">API</span>.</p>
-<h2>What is an endpoint?</h2>
-<p>Just an <span class="caps">HTML</span> address that gives you access to data</p>
-<p>Let&#8217;s install <a href="https://www.getpostman.com/">Postman</a></p>
-<p>Now let&#8217;s first take a look at reddit&#8217;s <span class="caps">API</span> for a particular subreddit.</p>
-<p>Go to <a href="https://www.reddit.com/r/ubc.json">https://www.reddit.com/r/ubc.json</a>. You&#8217;ll see that this gives us data for that particular subreddit. Now let&#8217;s use postman to fetch it.</p>
-<h2>So what&#8217;s the point of all of this?</h2>
-<p>Well, you&#8217;ll be running your sentiment analyzer on all the posts of a particular subreddit of your choice by fetching data for that subreddit. We&#8217;ll first be hardcoding it to return values, then we&#8217;ll start doing javascript to take in inputs</p>
-<h2>So how do I make a request to fetch information?</h2>
-<p>Let&#8217;s say we wanted to play around with <a href="https://github.com/HackerNews/API"> hacker news&#8217; <span class="caps">API</span> </a></p>
-<p>Let&#8217;s get the top 10 story ids on Hacker News&#8217; <span class="caps">API</span></p>
-<h3 class="file-heading"><em>request_json_ubc.py</em></h3>
-<pre class="file">import requests
-
-# Get top story ids on hacker news
-response = requests.get('https://hacker-news.firebaseio.com/v0/topstories.json?print=pretty')
-print(response.json())
+<h2>A variable is a value that can change</h2>
+<p>Try to predict what lucy would be on each print</p>
+<h3 class="file-heading"><em>variables.py</em></h3>
+<pre class="file">lucy = 10 + 2 - 1
+print("lucy variable value: {}".format(lucy))
+lucy = 13 + 2 - 1
+print("lucy variable value: {}".format(lucy))
 </pre>
 <h3><b>Execute:</b></h3>
-<pre class="instructions">python3 request_json_ubc.py</pre>
+<pre class="instructions">python variables.py</pre>
 <h3><b>Output:</b></h3>
 <pre class="sample">
-<div class="sample_command">$ python3 request_json_ubc.py</div>
-<p>Traceback (most recent call last):<br />
-  File &#8220;/Users/bea/anaconda3/lib/python3.7/site-packages/urllib3/contrib/pyopenssl.py&#8221;, line 453, in wrap_socket<br />
-    cnx.do_handshake()<br />
-  File &#8220;/Users/bea/anaconda3/lib/python3.7/site-packages/OpenSSL/<span class="caps">SSL</span>.py&#8221;, line 1907, in do_handshake<br />
-    self.<em>raise_ssl_error(self.</em>ssl, result)<br />
-  File &#8220;/Users/bea/anaconda3/lib/python3.7/site-packages/OpenSSL/<span class="caps">SSL</span>.py&#8221;, line 1632, in _raise_ssl_error<br />
-    raise SysCallError(-1, &#8220;Unexpected <span class="caps">EOF</span>&#8221;)<br />
-OpenSSL.<span class="caps">SSL</span>.SysCallError: (-1, &#8216;Unexpected <span class="caps">EOF</span>&#8217;)</p>
-<p>During handling of the above exception, another exception occurred:</p>
-<p>Traceback (most recent call last):<br />
-  File &#8220;/Users/bea/anaconda3/lib/python3.7/site-packages/urllib3/connectionpool.py&#8221;, line 600, in urlopen<br />
-    chunked=chunked)<br />
-  File &#8220;/Users/bea/anaconda3/lib/python3.7/site-packages/urllib3/connectionpool.py&#8221;, line 343, in <em>make_request<br />
-    self._validate</em>conn(conn)<br />
-  File &#8220;/Users/bea/anaconda3/lib/python3.7/site-packages/urllib3/connectionpool.py&#8221;, line 839, in <em>validate_conn<br />
-    conn.connect()<br />
-  File &#8220;/Users/bea/anaconda3/lib/python3.7/site-packages/urllib3/connection.py&#8221;, line 344, in connect<br />
-    ssl_context=context)<br />
-  File &#8220;/Users/bea/anaconda3/lib/python3.7/site-packages/urllib3/util/ssl_.py&#8221;, line 344, in ssl_wrap_socket<br />
-    return context.wrap_socket(sock, server_hostname=server_hostname)<br />
-  File &#8220;/Users/bea/anaconda3/lib/python3.7/site-packages/urllib3/contrib/pyopenssl.py&#8221;, line 459, in wrap</em>socket<br />
-    raise ssl.SSLError(&#8216;bad handshake: %r&#8217; % e)<br />
-ssl.SSLError: (&#8220;bad handshake: SysCallError(-1, &#8216;Unexpected <span class="caps">EOF</span>&#8217;)&#8221;,)</p>
-<p>During handling of the above exception, another exception occurred:</p>
-<p>Traceback (most recent call last):<br />
-  File &#8220;/Users/bea/anaconda3/lib/python3.7/site-packages/requests/adapters.py&#8221;, line 449, in send<br />
-    timeout=timeout<br />
-  File &#8220;/Users/bea/anaconda3/lib/python3.7/site-packages/urllib3/connectionpool.py&#8221;, line 638, in urlopen<br />
-    <em>stacktrace=sys.exc_info()<sup class="footnote" id="fnr2"><a href="#fn2">2</a></sup>)<br />
-  File &#8220;/Users/bea/anaconda3/lib/python3.7/site-packages/urllib3/util/retry.py&#8221;, line 398, in increment<br />
-    raise MaxRetryError(</em>pool, url, error or ResponseError(cause))<br />
-urllib3.exceptions.MaxRetryError: HTTPSConnectionPool(host=&#8216;hacker-news.firebaseio.com&#8217;, port=443): Max retries exceeded with url: /v0/topstories.json?print=pretty (Caused by SSLError(SSLError(&#8220;bad handshake: SysCallError(-1, &#8216;Unexpected <span class="caps">EOF</span>&#8217;)&#8221;)))</p>
-<p>During handling of the above exception, another exception occurred:</p>
-<p>Traceback (most recent call last):<br />
-  File &#8220;request_json_ubc.py&#8221;, line 4, in <module><br />
-    response = requests.get(&#8216;https://hacker-news.firebaseio.com/v0/topstories.json?print=pretty&#8217;)<br />
-  File &#8220;/Users/bea/anaconda3/lib/python3.7/site-packages/requests/api.py&#8221;, line 75, in get<br />
-    return request(&#8216;get&#8217;, url, params=params, <strong>kwargs)<br />
-  File &#8220;/Users/bea/anaconda3/lib/python3.7/site-packages/requests/api.py&#8221;, line 60, in request<br />
-    return session.request(method=method, url=url, *</strong>kwargs)<br />
-  File &#8220;/Users/bea/anaconda3/lib/python3.7/site-packages/requests/sessions.py&#8221;, line 533, in request<br />
-    resp = self.send(prep, <strong>send_kwargs)<br />
-  File &#8220;/Users/bea/anaconda3/lib/python3.7/site-packages/requests/sessions.py&#8221;, line 646, in send<br />
-    r = adapter.send(request, *</strong>kwargs)<br />
-  File &#8220;/Users/bea/anaconda3/lib/python3.7/site-packages/requests/adapters.py&#8221;, line 514, in send<br />
-    raise SSLError(e, request=request)<br />
-requests.exceptions.SSLError: HTTPSConnectionPool(host=&#8216;hacker-news.firebaseio.com&#8217;, port=443): Max retries exceeded with url: /v0/topstories.json?print=pretty (Caused by SSLError(SSLError(&#8220;bad handshake: SysCallError(-1, &#8216;Unexpected <span class="caps">EOF</span>&#8217;)&#8221;)))<br />
+<div class="sample_command">$ python variables.py</div>
+<p>lucy variable value: 11<br />
+lucy variable value: 14<br />
 </pre></p>
-<p>Now let&#8217;s say that we wanted to get the stories for just the top 10</p>
-<h3 class="file-heading"><em>request_top_10.py</em></h3>
-<pre class="file">import requests
-
-response = requests.get('https://hacker-news.firebaseio.com/v0/topstories.json?print=pretty')
-
-# Get top 10 ids
-top_ten_ids = response.json()[:10]
-
-print('Top ten ids:', top_ten_ids)
-
-# Fetch top 10 stories
-
-stories = []
-for id in top_ten_ids:
-  curr_story_api_url = 'https://hacker-news.firebaseio.com/v0/item/{}.json?print=pretty'.format(id)
-  curr_story = requests.get(curr_story_api_url)
-  stories.append(curr_story.json())
-
-print('Top ten stories:', stories)
+<h2>Python has untyped variables</h2>
+<ul>
+	<li>In python, variables can be of <span class="caps">ANY</span> type and you don&#8217;t have to declare it.</li>
+</ul>
+<p>This is what it looks like in C / C++, where you have to declare the type of variable</p>
+<h3 class="file-heading"><em>typed_variables.h</em></h3>
+<pre class="file">int lucy = 1;
+string colm = "Hello";
+float morsal = 3.705;
+</pre>
+<p>This is what it looks like in python</p>
+<h3 class="file-heading"><em>untyped_variables.py</em></h3>
+<pre class="file">lucy = 1
+colm = "Hello"
+morsal = 3.705
+</pre>
+<h2>Unlike normal math equations, the &#8220;conclusion&#8221; is on the left side</h2>
+<p>In math we do something like <code>1 + 2 + 3 = answer</code> in programming however, we set the answer to the equation. <code>answer = 1 + 2 + 3</code> The lefthand side almost always contains only one word.</p>
+<h2>Name of the variable does not matter</h2>
+<p>A common mistake people often make is thinking that the name of the variable matters. it does not.</p>
+<h3 class="file-heading"><em>name_does_not_matter.py</em></h3>
+<pre class="file">harry = 1.385
+one = "Harry"
+</pre>
+<p>Run this file and you will see that it won&#8217;t throw any errors</p>
+<h3><b>Execute:</b></h3>
+<pre class="instructions">python name_does_not_matter.py</pre>
+<h3><b>Output:</b></h3>
+<pre class="sample">
+<div class="sample_command">$ python name_does_not_matter.py</div>
+<p></pre></p>
+<p>Another common mistake people make is thinking that there has to be quotation marks to variables. Variables never have quotation marks. They aren&#8217;t strings! Their value could be strings, but they are not.</p>
+<h3 class="file-heading"><em>quotation_marks_around_vars.py</em></h3>
+<pre class="file">"one" = "Harry"
 </pre>
 <h3><b>Execute:</b></h3>
-<pre class="instructions">python3 request_top_10.py</pre>
+<pre class="instructions">python quotation_marks_around_vars.py</pre>
 <h3><b>Output:</b></h3>
 <pre class="sample">
-<div class="sample_command">$ python3 request_top_10.py</div>
-<p>Traceback (most recent call last):<br />
-  File &#8220;/Users/bea/anaconda3/lib/python3.7/site-packages/urllib3/contrib/pyopenssl.py&#8221;, line 453, in wrap_socket<br />
-    cnx.do_handshake()<br />
-  File &#8220;/Users/bea/anaconda3/lib/python3.7/site-packages/OpenSSL/<span class="caps">SSL</span>.py&#8221;, line 1907, in do_handshake<br />
-    self.<em>raise_ssl_error(self.</em>ssl, result)<br />
-  File &#8220;/Users/bea/anaconda3/lib/python3.7/site-packages/OpenSSL/<span class="caps">SSL</span>.py&#8221;, line 1632, in _raise_ssl_error<br />
-    raise SysCallError(-1, &#8220;Unexpected <span class="caps">EOF</span>&#8221;)<br />
-OpenSSL.<span class="caps">SSL</span>.SysCallError: (-1, &#8216;Unexpected <span class="caps">EOF</span>&#8217;)</p>
-<p>During handling of the above exception, another exception occurred:</p>
-<p>Traceback (most recent call last):<br />
-  File &#8220;/Users/bea/anaconda3/lib/python3.7/site-packages/urllib3/connectionpool.py&#8221;, line 600, in urlopen<br />
-    chunked=chunked)<br />
-  File &#8220;/Users/bea/anaconda3/lib/python3.7/site-packages/urllib3/connectionpool.py&#8221;, line 343, in <em>make_request<br />
-    self._validate</em>conn(conn)<br />
-  File &#8220;/Users/bea/anaconda3/lib/python3.7/site-packages/urllib3/connectionpool.py&#8221;, line 839, in <em>validate_conn<br />
-    conn.connect()<br />
-  File &#8220;/Users/bea/anaconda3/lib/python3.7/site-packages/urllib3/connection.py&#8221;, line 344, in connect<br />
-    ssl_context=context)<br />
-  File &#8220;/Users/bea/anaconda3/lib/python3.7/site-packages/urllib3/util/ssl_.py&#8221;, line 344, in ssl_wrap_socket<br />
-    return context.wrap_socket(sock, server_hostname=server_hostname)<br />
-  File &#8220;/Users/bea/anaconda3/lib/python3.7/site-packages/urllib3/contrib/pyopenssl.py&#8221;, line 459, in wrap</em>socket<br />
-    raise ssl.SSLError(&#8216;bad handshake: %r&#8217; % e)<br />
-ssl.SSLError: (&#8220;bad handshake: SysCallError(-1, &#8216;Unexpected <span class="caps">EOF</span>&#8217;)&#8221;,)</p>
-<p>During handling of the above exception, another exception occurred:</p>
-<p>Traceback (most recent call last):<br />
-  File &#8220;/Users/bea/anaconda3/lib/python3.7/site-packages/requests/adapters.py&#8221;, line 449, in send<br />
-    timeout=timeout<br />
-  File &#8220;/Users/bea/anaconda3/lib/python3.7/site-packages/urllib3/connectionpool.py&#8221;, line 638, in urlopen<br />
-    <em>stacktrace=sys.exc_info()<sup class="footnote" id="fnr2"><a href="#fn2">2</a></sup>)<br />
-  File &#8220;/Users/bea/anaconda3/lib/python3.7/site-packages/urllib3/util/retry.py&#8221;, line 398, in increment<br />
-    raise MaxRetryError(</em>pool, url, error or ResponseError(cause))<br />
-urllib3.exceptions.MaxRetryError: HTTPSConnectionPool(host=&#8216;hacker-news.firebaseio.com&#8217;, port=443): Max retries exceeded with url: /v0/topstories.json?print=pretty (Caused by SSLError(SSLError(&#8220;bad handshake: SysCallError(-1, &#8216;Unexpected <span class="caps">EOF</span>&#8217;)&#8221;)))</p>
-<p>During handling of the above exception, another exception occurred:</p>
-<p>Traceback (most recent call last):<br />
-  File &#8220;request_top_10.py&#8221;, line 3, in <module><br />
-    response = requests.get(&#8216;https://hacker-news.firebaseio.com/v0/topstories.json?print=pretty&#8217;)<br />
-  File &#8220;/Users/bea/anaconda3/lib/python3.7/site-packages/requests/api.py&#8221;, line 75, in get<br />
-    return request(&#8216;get&#8217;, url, params=params, <strong>kwargs)<br />
-  File &#8220;/Users/bea/anaconda3/lib/python3.7/site-packages/requests/api.py&#8221;, line 60, in request<br />
-    return session.request(method=method, url=url, *</strong>kwargs)<br />
-  File &#8220;/Users/bea/anaconda3/lib/python3.7/site-packages/requests/sessions.py&#8221;, line 533, in request<br />
-    resp = self.send(prep, <strong>send_kwargs)<br />
-  File &#8220;/Users/bea/anaconda3/lib/python3.7/site-packages/requests/sessions.py&#8221;, line 646, in send<br />
-    r = adapter.send(request, *</strong>kwargs)<br />
-  File &#8220;/Users/bea/anaconda3/lib/python3.7/site-packages/requests/adapters.py&#8221;, line 514, in send<br />
-    raise SSLError(e, request=request)<br />
-requests.exceptions.SSLError: HTTPSConnectionPool(host=&#8216;hacker-news.firebaseio.com&#8217;, port=443): Max retries exceeded with url: /v0/topstories.json?print=pretty (Caused by SSLError(SSLError(&#8220;bad handshake: SysCallError(-1, &#8216;Unexpected <span class="caps">EOF</span>&#8217;)&#8221;)))<br />
+<div class="sample_command">$ python quotation_marks_around_vars.py</div>
+File &#8220;quotation_marks_around_vars.py&#8221;, line 1
+&#8220;one&#8221; = &#8220;Harry&#8221;
+^
+<p>SyntaxError: can&#8217;t assign to literal<br />
 </pre></p>
-<h2>Coding exercise</h2>
-<p>1. Fetch the titles of the top 50 stories of Hacker News</p>
-<p>2. Get the top 5 comments of the top 10 stories of Hacker News</p>
-<p>3. Run Sentiment Analysis on the top 5 comments of the top 10 stories in hacker news</p>
+<h2>Advanced: Return multiple values in python.</h2>
+<p>Python is quite unique in that you can make two variables equal to two statements. An example of this would be a function that returns two values.</p>
+<h3 class="file-heading"><em>return_two_values.py</em></h3>
+<pre class="file">def fn_return_two():
+  return "a", "b"
+
+str_1, str_2 = fn_return_two()
+
+print("This is the first value returned {}".format(str_1))
+print("This is the second value returned {}".format(str_2))
+</pre>
+<h3><b>Execute:</b></h3>
+<pre class="instructions">python return_two_values.py</pre>
+<h3><b>Output:</b></h3>
+<pre class="sample">
+<div class="sample_command">$ python return_two_values.py</div>
+<p>This is the first value returned a<br />
+This is the second value returned b<br />
+</pre></p>
+<h2>Coding Exercises</h2>
+<p>Remember to add, commit, and push the file to your own forked repo!</p>
+<p>1. Create a file called <code>lecture_00_lab02_variables.py</code></p>
+<p>2. Create variables for your first name, last name, your school, your favorite number, and your favorite color!</p>
+<p>3. Return the string &#8220;42&#8221; by adding <span class="caps">TWO</span> strings together. Do not just give <code>forty_two = "42"</code></p>
+<p>4. Return the integer value 5 by using addition, subtraction, and division</p>
         <nav class="foot-navigation">
       <a href="lab_01.html">
       <svg version="1.1" width="36" height="36" viewBox="0 0 36 36" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M27.66,15.61,18,6,8.34,15.61A1,1,0,1,0,9.75,17L17,9.81V28.94a1,1,0,1,0,2,0V9.81L26.25,17a1,1,0,0,0,1.41-1.42Z"></path></svg>
