--- a/lab_04.html
+++ b/lab_04.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Lab 4 - Software Development</title>
+    <title>Lab 4 - Python 101</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 viewport-fit=cover"">
-    <meta name="description" content="A guided tour thatintroduces students to building web applications">
+    <meta name="description" content="A guided tour that walks through the fundamentals of Git">
     <meta name="theme-color" content="#0000ff">
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" media="screen" href="reset.css">
@@ -31,56 +31,156 @@
     <div class="layout">
       <div id="index">
         <p class="link-home">
-          <a href="index.html"><span>Software Development</span></a>
+          <a href="index.html"><span>Python 101</span></a>
         </p>
         <button class="link-menu">Menu</button>
         <nav tabindex="0">
           <ol>
-              <li id="lab_1_link"><a href="lab_01.html">Client-Server Model</a></li>
-  <li id="lab_2_link"><a href="lab_02.html">API</a></li>
-  <li id="lab_3_link"><a href="lab_03.html">Homework Assignment 04</a></li>
-  <li id="lab_4_link"><a href="lab_04.html">REST</a></li>
-  <li id="lab_5_link"><a href="lab_05.html">SQL</a></li>
-  <li id="lab_6_link"><a href="lab_06.html">Client Side Programming</a></li>
-  <li id="lab_7_link"><a href="lab_07.html">Node</a></li>
-  <li id="lab_8_link"><a href="lab_08.html">React</a></li>
+              <li id="lab_1_link"><a href="lab_01.html">Top Down</a></li>
+  <li id="lab_2_link"><a href="lab_02.html">Variables</a></li>
+  <li id="lab_3_link"><a href="lab_03.html">Data types and Data Structures</a></li>
+  <li id="lab_4_link"><a href="lab_04.html">Operators</a></li>
+  <li id="lab_5_link"><a href="lab_05.html">Quiz 00</a></li>
+  <li id="lab_6_link"><a href="lab_06.html">Homework Assignment 00</a></li>
 
           </ol>
         </nav>
       </div>
 
       <div id="content" tabindex="-1">
-        <h1 class="lab_title"><em>lab 4</em>  <span class="caps">REST</span></h1>
+        <h1 class="lab_title"><em>lab 4</em>  Operators</h1>
 <h2>Goals</h2>
 <ul>
-	<li>To understand what a RESTful <span class="caps">API</span> is</li>
-	<li>To build one</li>
+	<li>Understand arithmetic, relational, and logical operators</li>
 </ul>
-<h2>What does <span class="caps">REST</span> stand for?</h2>
-<h2>What&#8217;s the point of a RESTful <span class="caps">API</span>?</h2>
-<ul>
-	<li>Expects statelessness. No client context is stored in between requests. This means<br />
-that the client has to give all the information about themselves, which the server<br />
-can then use to service the request. (Ex. Giving the server the login details)</li>
-</ul>
-<ul>
-	<li>Cacheability. Storing previous information loaded for quick acccess</li>
-</ul>
-<h2>Example</h2>
-<p>There are 5 methods normally used. <span class="caps">GET</span>, <span class="caps">POST</span>, <span class="caps">DELETE</span>, <span class="caps">PUT</span>, <span class="caps">PATCH</span>. So far we have only used <span class="caps">GET</span> requests, and we will mostly focus on <span class="caps">GET</span> and <span class="caps">POST</span> requests.</p>
-<ul>
-	<li>&#8220;<span class="caps">GET</span>&#8221; requests are used to retrieve information for the server. The client will go to the browser like &#8220;https://localhost:5000/latest_tweets&#8221; and will fetch the latest tweets at that route.</li>
-</ul>
-<ul>
-	<li>&#8220;<span class="caps">POST</span>&#8221; requests are used to add information to the server. The client will go to the browser like &#8220;https://localhost:5000/latest_tweets&#8221; but instead of making a &#8220;<span class="caps">GET</span>&#8221; request we&#8217;ll make a &#8220;<span class="caps">POST</span>&#8221; request. Flask will then handle each request differently. If a &#8220;<span class="caps">POST</span>&#8221; request is given, we will expect a request body with information from the client. In this case, it will be a tweet written by the client. We will send that up to the server, who will then save it.</li>
-</ul>
-<p><img src="restful.png" style="max-width: 700px"></img></p>
-<h2>Things to keep in mind</h2>
-<ul>
-	<li>Two requests can go to the same route by doing either a &#8220;<span class="caps">POST</span>&#8221; or &#8220;<span class="caps">GET</span>&#8221; request</li>
-</ul>
-<h2>Coding Exercises</h2>
-<p>1. Look up how to explicitly specify a &#8220;<span class="caps">GET</span>&#8221; method on flask and do so</p>
+<h2>Arithmetic operators</h2>
+<table>
+<tr>
+    <th>Symbol</th>
+    <th>Task Performed</th> 
+    <th>Example</th>
+    <th>Output</th>
+</tr>
+<tr>
+    <td>+</td>
+    <td>Addition</td> 
+    <td>1 + 1</td>
+    <td>2</td>
+</tr>
+<tr>
+    <td>-</td>
+    <td>Subtraction</td> 
+    <td>1 &#8211; 1</td>
+    <td>0</td>
+</tr>
+<tr>
+    <td>/</td>
+    <td>Division</td> 
+    <td>1 / 2</td>
+    <td>0.5</td>
+</tr>
+<tr>
+    <td>*</td>
+    <td>Multiplication</td> 
+    <td>1 * 2</td>
+    <td>2</td>
+</tr>
+<tr>
+    <td>//</td>
+    <td>Floor division (round down to an int)</td> 
+    <td>1 / 2</td>
+    <td>0</td>
+</tr>
+<tr>
+    <td>**</td>
+    <td>To the power of</td> 
+    <td>2**2</td>
+    <td>4</td>
+</tr>
+</table>
+<h2>Relational operators</h2>
+<table>
+<tr>
+    <th>Symbol</th>
+    <th>Task Performed</th> 
+    <th>Example</th>
+    <th>Output</th>
+</tr>
+<tr>
+    <td>==</td>
+    <td>True if it is equal</td> 
+    <td>1 == 1</td>
+    <td>True</td>
+</tr>
+<tr>
+    <td>!=</td>
+    <td>True if not equal to</td> 
+    <td>1 != 1</td>
+    <td>False</td>
+</tr>
+<tr>
+    <td>&lt;</td>
+    <td>Less than</td> 
+    <td>1 &lt; 1</td>
+    <td>False</td>
+</tr>
+<tr>
+    <td>*</td>
+    <td>Greater than</td> 
+    <td>1 &gt; 1</td>
+    <td>False</td>
+</tr>
+<tr>
+    <td>&lt;=</td>
+    <td>Less than or equal to</td> 
+    <td>1 &lt;= 1</td>
+    <td>True</td>
+</tr>
+<tr>
+    <td>&gt;=</td>
+    <td>Greater than or equal to </td> 
+    <td>1&gt;=1</td>
+    <td>True</td>
+</tr>
+</table>
+<h2>Logical operators</h2>
+<table>
+<tr>
+    <th>Symbol</th>
+    <th>Task Performed</th> 
+    <th>Example</th>
+    <th>Output</th>
+</tr>
+<tr>
+    <td>and</td>
+    <td>True, if both are true  </td> 
+    <td>(1 == 1) and (2 == 3)</td>
+    <td>False. One is false.</td>
+</tr>
+<tr>
+    <td>or</td>
+    <td>True, if one is true</td> 
+    <td>(1 == 2) or (2 == 3)</td>
+    <td>False. Neither are true.</td>
+</tr>
+<tr>
+    <td>not</td>
+    <td>True, if one is false</td> 
+    <td>(1 == 2)</td>
+    <td>True. It is not true</td>
+</tr>
+</table>
+<h2>Written Exercises</h2>
+<p>1. What is the result of <code>true == true</code>?</p>
+<p>2. What is the result of <code>false == true</code>?</p>
+<p>3. What is the result of <code>true and true</code>?</p>
+<p>4. What is the result of <code>true and false</code>?</p>
+<p>5. What is the result of <code>3 == 3 and 4 == 4</code>?</p>
+<p>6. What is the result of <code>3 == 2 and 4 == 4</code>?</p>
+<p>7. What is the difference <code>between = and ==</code>?</p>
+<p>8. What is the result of <code>false != false</code>?</p>
+<p>9. What is the result of <code>false != true</code>?</p>
+<p>10. What is the difference between <code>and</code> and <code>or</code>? Give an example that shows the difference</p>
         <nav class="foot-navigation">
       <a href="lab_03.html">
       <svg version="1.1" width="36" height="36" viewBox="0 0 36 36" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M27.66,15.61,18,6,8.34,15.61A1,1,0,1,0,9.75,17L17,9.81V28.94a1,1,0,1,0,2,0V9.81L26.25,17a1,1,0,0,0,1.41-1.42Z"></path></svg>
